@@ -16,6 +16,7 @@
 			<label index="createnewtranslation.description">Select the appropriate flag to create a new translation for this page. Once the language is added, you can translate the page properties and start translating the page content of the original page.</label>
 			<label index="pagelocalizationmode.description">You can see here how the page is localized. Translations either allow separate structures (more flexible) or stick to a 1:1 translation (only translate elements in the default language). This setting is defined in the Data Structure source of the Page Template.</label>
 			<label index="pagelocalizationdisplaymode.description">The display mode lets you switch between displaying all languages, only the selected language that you chose in the select box above, or only the elements that were translated already. Where the first option gives you a nice overview of all elements that are translated yet, you can focus on one language by displaying only the selected translation page and / or elements.</label>
+			<label index="disablePageStructureInheritance.description">The inheritance mode enables various options for the page-structure handling. The default setting is to inherit the structure from the default language. but you're free to create your own element structure just enable the checkbox.</label>
 			<label index="advancedfunctions_showhiddenelements.description">Enabling this option also displays the content elements that are hidden in the </label>
 			<label index="advancedfunctions_showoutline.description">This display mode shows the data structures of the elements that are used in this page. It is mainly used for administration purposes and to clean up the XML if something went wrong on this page.</label>
 			<label index="outline_status_cleanall.description">[FILL IN]Why is my XML dirty and why do I want to clean it up?</label>
